<resources>
    <string name="app_name">Weather Forcast</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="customer_nid_no">Customer NID No.*</string>
    <string name="customer_s_date_of_birth_according_to_nid">Customer\'s Date of Birth(According to NID)*</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for weather forecast</string>
    <string name="settings">Settings</string>
    <string name="change_party_name">Change Party Name</string>
    <string name="city">City</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="time">time</string>
    <string name="temperature">Temperature</string>
    <string name="feel_like">Feel Like</string>
    <string name="humidity">Humidity</string>
    <string name="degree_symbol">°</string>
    <string name="date">date</string>
    <string name="result_ok">okay</string>
    <string name="something_went_wrong">something went wrong. Please try later</string>



</resources>