<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp8"
    android:layout_marginTop="@dimen/dp8"
    android:layout_marginEnd="@dimen/dp8"
    android:layout_marginBottom="@dimen/dp8"
    card_view:cardBackgroundColor="@color/black"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="0dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutWork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp8"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvWeatherCondition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/dp8"
            android:fontFamily="@font/font_dmsans_regular"
            android:text="@string/weather_condition"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toStartOf="@id/tvDate"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_dmsans_regular"
            android:gravity="end"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/tvWeatherCondition"
            card_view:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            card_view:layout_constraintGuide_percent=".4">

        </androidx.constraintlayout.widget.Guideline>


        <TextView
            android:id="@+id/tvTitleTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp4"
            android:layout_marginBottom="@dimen/dp8"
            android:alpha=".5"
            android:fontFamily="@font/font_dmsans_regular"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toStartOf="@id/guideline"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvWeatherCondition" />


        <TextView
            android:id="@+id/tvTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:fontFamily="@font/font_dmsans_regular"
            android:gravity="start"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toStartOf="@+id/tvTime"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tvWeatherCondition" />


        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:fontFamily="@font/font_dmsans_regular"
            android:gravity="end"
            android:text="@string/time"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/tvTemperature"
            card_view:layout_constraintTop_toBottomOf="@+id/tvWeatherCondition" />


        <TextView
            android:id="@+id/tvTitleFeelLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp4"
            android:layout_marginBottom="@dimen/dp8"
            android:alpha=".5"
            android:fontFamily="@font/font_dmsans_regular"
            android:text="@string/feel_like"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toStartOf="@id/guideline"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTemperature" />

        <TextView
            android:id="@+id/tvFeelLike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:fontFamily="@font/font_dmsans_regular"
            android:gravity="start"
            android:text="@string/feel_like"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTemperature" />


        <TextView
            android:id="@+id/tvTitleHumidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/dp4"
            android:alpha=".5"
            android:fontFamily="@font/font_dmsans_regular"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toStartOf="@id/guideline"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tvFeelLike" />

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp4"
            android:fontFamily="@font/font_dmsans_regular"
            android:gravity="start"
            android:text="@string/humidity"
            android:textColor="@color/white"
            android:textSize="13sp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@id/guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tvFeelLike" />

        <ImageView
            android:id="@+id/imageViewWeatherImage"
            android:layout_width="@dimen/dp40"
            android:layout_height="@dimen/dp35"
            android:contentDescription="@string/weather_condition"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent">

        </ImageView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>